--- a/index.html
+++ b/index.html
@@ -1,11 +1,93 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>AnhDn Dev Web</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    <h1>Hi!</h1>
-  </body>
+<html>
+    <head>
+        <title>anhdang.dev.blog</title>
+        <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin-ext,vietnamese" rel="stylesheet">
+        <link href="./css/theme.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="./css/highlight/tomorrow-night.css">
+        <link rel="stylesheet" href="./css/fontello.css">
+        <script src="./js/highlight.pack.js"></script>
+        <script src="./js/marked.js"></script>
+        <script>
+        var blogTitle = 'anhdang.dev.blog';
+
+        hljs.initHighlightingOnLoad();
+        marked.setOptions({
+          highlight: function(code) {
+            return hljs.highlightAuto(code).value;
+          }
+        });
+
+        var open = function(url) {
+            return new Promise(function(resolve, reject){
+                var xhr = new XMLHttpRequest;
+                xhr.open('GET', url, true);
+
+                xhr.onload = function () {
+                    if (xhr.status == 200) {
+                        resolve(xhr.response);
+                    } else {
+                        reject();
+                    }
+                };
+
+                xhr.onerror = function() {
+                    reject();
+                }
+
+                xhr.send();
+            });
+        };
+
+        var launch = function() {
+            var body = document.querySelector(".main");
+            var file = window.location.hash.replace(/#/g, '') + '.md';
+            if (body != undefined) {
+                open('./posts/' + file).then(function(data){
+                    if (data != '') {
+                        var lines = data.split('\n');
+                        var title = blogTitle;
+                        if (lines.length > 0) title = lines[0].replace(/#/g, '') + ' | ' + blogTitle;
+                        body.innerHTML = marked(data);
+                        document.title = title;
+                    }
+                }, function(){
+                    open('./posts/home.md').then(function(data){
+                        document.title = blogTitle;
+                        body.innerHTML = marked(data);
+                    });
+                });
+            }
+        };
+
+        var startup = function() {
+            launch();
+        };
+        </script>
+    </head>
+    <body onload="startup()" onhashchange="launch()">
+        <div class="header">
+            <a href="#home"><i class="icon icon-emo-coffee"></i> anhdang.dev.blog</a>
+        </div>
+        <div class="container">
+            <div class="main"></div>
+        </div>
+	    <div class="footer">
+            <p>Created with <a href="http://github.com/huytd/azeroth-js">azeroth.js</a></p>
+            <div class="social">
+                <a href="https://www.facebook.com/anhdangnhat"><i class="icon-facebook-squared"></i></a>
+                <a href="https://twitter.com/anhdangnhat"><i class="icon-twitter-squared"></i></a>
+                <a href="https://www.linkedin.com/in/anhdangnhat"><i class="icon-linkedin-squared"></i></a>
+                <a href="https://github.com/alexanderdna"><i class="icon-github-squared"></i></a>
+            </div>
+        </div>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'Insert-Your-GA-ID-Here', 'auto');
+          ga('send', 'pageview');
+        </script>
+    </body>
 </html>
