--- a/template.html
+++ b/template.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>{%title%} | Blog</title>
+        <title>{%title%} | anhdang.dev.blog</title>
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html;"><meta name=viewport content="initial-scale=1.0 maximum-scale=1.0">
         {%meta%}
